--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,7 @@
 %table#movies
   %thead
     %tr
-      %th= link_to "Movie Title", :controller => "movies", :id => "title_header"
+      %th= link_to "Movie Title", {:controller => "movies", :id => "title_header", :id => "title_header"
       %th Rating
       %th= link_to "Release Date", :controller => "movies", :id => "release_date_header"
       %th More Info
