Clickable sort links and show ratings filter v1.1

--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -17,12 +17,12 @@
       %th More Info
   %tbody
     - @movies.each do |movie|
-      = if (!params[:ratings].key?(movie.rating))
+      - if (!params[:ratings].key?(movie.rating))
         %tr
           %td= movie.title 
           %td= movie.rating
           %td= movie.release_date
           %td= link_to "More about #{movie.title}", movie_path(movie)
-      = end
+      - end
 
 = link_to 'Add new movie', new_movie_path
