--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -11,9 +11,9 @@
 %table#movies
   %thead
     %tr
-      %th#odd1= link_to "Movie Title", {:controller => "movies", :sort => "title"}, :id => "title_header"
+      %th{:class => ("hilite" if params[:sort] == "title")}= link_to "Movie Title", {:controller => "movies", :sort => "title"}, :id => "title_header"
       %th Rating
-      %th#odd2= link_to "Release Date", {:controller => "movies", :sort => "release_date"}, :id => "release_date_header"
+      %th{:class => ("hilite" if params[:sort] == "release_date")}= link_to "Release Date", {:controller => "movies", :sort => "release_date"}, :id => "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
