--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,8 +5,8 @@
   Include: 
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]"
-  = submit_tag 'Refresh'
+    = check_box_tag "ratings[#{rating}]", :value => (params["ratings%5B#{rating}%5D"] ? 1 : 0)
+  = submit_tag 'Refresh', :class => "ratings_submit"
 
 %table#movies
   %thead
