--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,7 +5,7 @@
   Include: 
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", :value => 1, :checked => (@filtered_ratings.find_index(rating) ? "true" : "false")
+    = check_box_tag "ratings[#{rating}]", 1, ("checked" if @filtered_ratings.find_index(rating))
   = submit_tag 'Refresh', :class => "ratings_submit"
 
 %table#movies
