--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -6,7 +6,7 @@
   - @all_ratings.each do |rating|
     = rating
     = check_box_tag "ratings[#{rating}]", 1, ("checked" if @filtered_ratings.find_index(rating))
-  = submit_tag 'Refresh', :class => "ratings_submit"
+  = submit_tag 'Refresh', :id => "ratings_submit"
 
 %table#movies
   %thead
